complete job apply

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -78,7 +78,7 @@
 			<!-- -->
 			<div class="col-xs-2 left-sidebar">
 				<a href="#"><h5 class="hvr-grow">Apply for jobs</h5></a>
-				<a href=""><h5 class="hvr-grow">View my application</h5></a>
+				<a href="viewapp"><h5 class="hvr-grow">View my application</h5></a>
 				<a href=""><h5 class="hvr-grow">Manager / Hire teams entrance</h5></a>
 				<!-- <a href=""><h4></h4></a> -->
 			</div>
