--- a/WebContent/pages/joblist.html
+++ b/WebContent/pages/joblist.html
@@ -5,9 +5,13 @@
 				<div class="col-xs-8">
 					<h4>{{job.jobPosting.title}}</h4>
 				</div>
-				<div class="col-xs-2">
-					<a href="job/{{job.jobPosting._jobId}}" type="button" class="btn btn-default">Details</a>
+				<div class="col-xs-1">
+					<a href="job/{{job.jobPosting._jobId}}" class="btn btn-default">Details</a>
 				</div>
+				<div class="col-xs-1">
+					<a href="apply/{{job.jobPosting._jobId}}" class="btn btn-primary">Apply</a>
+				</div>
+				<div class="col-xs-2"></div>
 			</div>
 			<div class="row">
 				<div class="col-xs-2">
