complete job search

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -53,12 +53,6 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			
-			<form class="navbar-form navbar-left" role="Search for jobs ...">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search">
-				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
-			</form>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -77,9 +71,9 @@
 		<div class="row-fluid">
 			<!-- -->
 			<div class="col-xs-2 left-sidebar">
-				<a href="#"><h5 class="hvr-grow">Apply for jobs</h5></a>
-				<a href="viewapp"><h5 class="hvr-grow">View my application</h5></a>
-				<a href=""><h5 class="hvr-grow">Manager / Hire teams entrance</h5></a>
+				<a href="searchjob"><h5 class="hvr-grow"><i class="fa fa-search"></i> Search for jobs</h5></a>
+				<a href="viewapp"><h5 class="hvr-grow"><i class="fa fa-book"></i> View my application</h5></a>
+				<a href=""><h5 class="hvr-grow"><i class="fa fa-sign-in"></i> Manager / Hire teams entrance</h5></a>
 				<!-- <a href=""><h4></h4></a> -->
 			</div>
 			<div class="col-xs-10 no-padding-left no-padding-right">
