--- a/WebContent/pages/viewapp.html
+++ b/WebContent/pages/viewapp.html
@@ -24,63 +24,46 @@
 					<div ng-if="currentStatus == 'APP_SUBMITTED_NOT_PROCESSED'">
 						<!-- can be updated and cancelled, no archive here -->
 
-						<form ng-submit="" role="form">
-							<div class="row">
-								<div class="col-xs-4">
-									<button type="submit" class="btn btn-sm btn-success">Update your application</button>
-								</div>
-								<div class="col-xs-4">
-									<a href="" class="btn btn-sm btn-danger">Cancel application</a>
-								</div>
-								<div class="col-xs-4">
-									<a href="" class="btn btn-sm btn-info">Apply for another job</a>
-								</div>
+						<div class="row">
+							<div class="col-xs-4">
+								<a ng-href="updateapp/{{app.application._appId}}" type="submit" class="btn btn-sm btn-success">Update your application</a>
 							</div>
-							<div class="form-group">
-								<label>Your full name:</label>
-								<input type="text" name="fullName" class="form-control" id="" placeholder="Your full name" required="true" ng-model="app.application.fullName"></div>
-							<div class="form-group">
-								<label>Your driver license number:</label>
-								<input type="text" name="driverLicenseNumber" class="form-control" id="" placeholder="Your driver license number" required="true" ng-model="app.application.driverLicenseNumber"></div>
-							<div class="form-group">
-								<label>Your post code:</label>
-								<input type="text" name="postCode" class="form-control" id="" placeholder="Your post code" required="true" ng-model="app.application.postCode"></div>
-							<div class="form-group">
-								<label>Your cover letter:</label>
-								<textarea name="textCoverLetter" id="input" class="form-control" rows="3" ng-model="app.application.textCoverLetter"></textarea>
+							<div class="col-xs-4">
+								<a ng-href="cancelapp/{{app.application._appId}}" class="btn btn-sm btn-danger">Cancel application</a>
 							</div>
-							<div class="form-group">
-								<label>Your brief resume:</label>
-								<textarea name="textBriefResume" id="input" class="form-control" rows="3" ng-model="app.application.textBriefResume"></textarea>
+							<div class="col-xs-4">
+								<a href="#" class="btn btn-sm btn-info">Apply for another job</a>
 							</div>
-							<h4>Application status:</h4>
-							<h5>{{app.application.status}}</h5>
-						</form>
-
+						</div>
 					</div>
+					<!-- Application info -->
+					<h4>Full name:</h4>
+					<p>{{app.application.fullName}}</p>
+					<h4>Driver license number:</h4>
+					<p>{{app.application.driverLicenseNumber}}</p>
+					<h4>Post code:</h4>
+					<p>{{app.application.postCode}}</p>
+					<h4>Application status:</h4>
+					<h5>{{currentStatus}}</h5>
+					<h4>Cover letter:</h4>
+					<p ng-if="app.application.textCoverLetter != ''">{{app.application.textCoverLetter}}</p>
+					<p ng-if="app.application.textCoverLetter == ''">(No cover letter submitted)</p>
+					<h4>Brief resume:</h4>
+					<p ng-if="app.application.textBriefResume != ''">{{app.application.textBriefResume}}</p>
+					<p ng-if="app.application.textBriefResume == ''">(No brief resume submitted)</p>
+					<!-- buttons -->
 					<div ng-if="currentStatus != 'APP_SUBMITTED_NOT_PROCESSED'">
-						<h4>Full name:</h4>
-						<p>{{app.application.fullName}}</p>
-						<h4>Driver license number:</h4>
-						<p>{{app.application.driverLicenseNumber}}</p>
-						<h4>Post code:</h4>
-						<p>{{app.application.postCode}}</p>
-						<h4>Application status:</h4>
-						<h5>{{currentStatus}}</h5>
-						<h4>Cover letter:</h4>
-						<p ng-if="app.application.textCoverLetter != ''">{{app.application.textCoverLetter}}</p>
-						<p ng-if="app.application.textCoverLetter == ''">(No cover letter submitted)</p>
-						<h4>Brief resume:</h4>
-						<p ng-if="app.application.textBriefResume != ''">{{app.application.textBriefResume}}</p>
-						<p ng-if="app.application.textBriefResume == ''">(No brief resume submitted)</p>
+
 						<div ng-if="currentStatus == 'APP_INTERVIEW_PASSED' || currentStatus == 'APP_INTERVIEW_FAILED' || currentStatus == 'APP_REJECTED_BY_CANDIDATE' || currentStatus == 'APP_NOT_SHORTLISTED' || currentStatus == 'APP_CANCELLED'">
-							<h5 class="text-success" ng-if="currentStatus == 'APP_INTERVIEW_PASSED'">Congratulations! You have passed the interview and finalised all the job application procedure. Please wait for further contact.</h5>
+							<h5 class="text-success" ng-if="currentStatus == 'APP_INTERVIEW_PASSED'">
+								Congratulations! You have passed the interview and finalised all the job application procedure. Please wait for further contact.
+							</h5>
 							<h5 class="text-danger" ng-if="currentStatus == 'APP_INTERVIEW_FAILED'">We apologise that you have not passed the interview process.</h5>
 							<h4 class="text-info">
 								Your application has been finalised. You can click the following button to <strong>ARCHIVE</strong>
 								it. (cannot be undone)
 							</h4>
-							<a href="" class="btn btn-sm btn-primary">Archive application</a>
+							<a ng-href="archiveapp/{{app.application._appId}}" class="btn btn-sm btn-primary">Archive application</a>
 						</div>
 						<div ng-if="currentStatus == 'APP_AUTO_PROCESSED' || currentStatus == 'APP_REVIEWING' || currentStatus == 'APP_REVIEWED' || currentStatus == 'APP_SHORTLISTED' || currentStatus == 'APP_ACCEPTED_BY_CANDIDATE' || currentStatus == 'APP_ARCHIVED'">
 							<h4 class="text-warning">
