--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,6 +31,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular-route.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular-sanitize.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular-resource.min.js"></script>
+	
 	<script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
 	<!-- Angular controller -->
@@ -53,16 +54,9 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li><a href="#">Separated link</a></li>
-					</ul>
-				</li>
+			<ul class="nav navbar-nav navbar-right" ng-show="login == true">
+				<li><a>Login as: {{globalUid}}</a></li>
+				<li><a ng-href="logout/{{globalUid}}"><i class="fa fa-sign-out"></i> Logout</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
@@ -73,7 +67,9 @@
 			<div class="col-xs-2 left-sidebar">
 				<a href="searchjob"><h5 class="hvr-grow"><i class="fa fa-search"></i> Search for jobs</h5></a>
 				<a href="viewapp"><h5 class="hvr-grow"><i class="fa fa-book"></i> View my application</h5></a>
-				<a href=""><h5 class="hvr-grow"><i class="fa fa-sign-in"></i> Manager / Hire teams entrance</h5></a>
+				<!-- Login control -->
+				<a href="login" ng-show="login == false"><h5 class="hvr-grow"><i class="fa fa-sign-in"></i> Manager / Hire teams entrance</h5></a>
+				<a href="dashboard" ng-show="login == true"><h5 class="hvr-grow"><i class="fa fa-sign-in"></i> Manager / Hire teams entrance</h5></a>
 				<!-- <a href=""><h4></h4></a> -->
 			</div>
 			<div class="col-xs-10 no-padding-left no-padding-right">
