--- a/WebContent/pages/searchjob.html
+++ b/WebContent/pages/searchjob.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container animated fadeIn">
 	<div class="row centered-text">
 		<h1>Search for jobs</h1>
 		<hr class="title-hr"/>
