--- a/WebContent/pages/user/usersign.html
+++ b/WebContent/pages/user/usersign.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="row centered-text bg-success usersign-info" ng-show="success == true">
 		<h3>Login successful.</h3>
-		<h4>You have logged in via user ID [{{uIdLoggedIn}}]</h4>
+		<h4>You have logged in as {{loggedUser.firstName}} {{loggedUser.lastName}} ({{loggedUser.shortKey}})</h4>
 		<h4>System will redirect you to home page after 3 seconds...</h4>
 	</div>
 	<div class="row centered-text bg-danger usersign-info" ng-show="success == false">
