--- a/WebContent/pages/manage-apps.html
+++ b/WebContent/pages/manage-apps.html
@@ -33,10 +33,10 @@
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 			<div class="row">
 				<div class="col-xs-6">
-					<a type="button" class="btn btn-default btn-dashboard">Details</a>
+					<a ng-href="manage-viewapp/{{app.application._appId}}" type="button" class="btn btn-default btn-dashboard">Details</a>
 				</div>
 				<div class="col-xs-6">
-					<a type="button" class="btn btn-primary btn-dashboard" ng-if="app.application.status != 'APP_SHORTLISTED' && app.application.status != 'APP_ACCEPTED_BY_CANDIDATE' && app.application.status != 'APP_INTERVIEW_PASSED' && app.application.status != 'APP_INTERVIEW_FAILED' && app.application.status != 'APP_REJECTED_BY_CANDIDATE' && app.application.status != 'APP_NOT_SHORTLISTED' && app.application.status != 'APP_CANCELLED' && app.application.status != 'APP_ARCHIVED'">Auto check</a>
+					<a ng-href="app-autocheck/{{app.application._appId}}" type="button" class="btn btn-primary btn-dashboard" ng-if="app.application.status != 'APP_SHORTLISTED' && app.application.status != 'APP_ACCEPTED_BY_CANDIDATE' && app.application.status != 'APP_INTERVIEW_PASSED' && app.application.status != 'APP_INTERVIEW_FAILED' && app.application.status != 'APP_REJECTED_BY_CANDIDATE' && app.application.status != 'APP_NOT_SHORTLISTED' && app.application.status != 'APP_CANCELLED' && app.application.status != 'APP_ARCHIVED'">Auto check</a>
 					<a type="button" class="btn btn-primary btn-dashboard disabled" ng-if="app.application.status == 'APP_SHORTLISTED' || app.application.status == 'APP_ACCEPTED_BY_CANDIDATE' || app.application.status == 'APP_INTERVIEW_PASSED' || app.application.status == 'APP_INTERVIEW_FAILED' || app.application.status == 'APP_REJECTED_BY_CANDIDATE' || app.application.status == 'APP_NOT_SHORTLISTED' || app.application.status == 'APP_CANCELLED' || app.application.status == 'APP_ARCHIVED'">Auto check n/a</a>
 				</div>
 			</div>
