--- a/WebContent/pages/app-autocheck.html
+++ b/WebContent/pages/app-autocheck.html
@@ -3,12 +3,17 @@
 		<h1>Auto checking candidate identity</h1>
 		<hr class="title-hr"/>
 	</div>
-	<div class="row centered-text">
-		<h3>Auco check result of application (ID={{checkedAppId}})</h3>
+	<div class="row centered-text" ng-show="success == true">
+		<h3>Auto check result of application (ID={{checkedAppId}})</h3>
 		<h4>PDV result</h4>
 		<p>{{pdvResult}}</p>
-		<h4>{{crvResult}}</h4>
+		<h4>CRV result</h4>
 		<p>{{crvResult}}</p>
 		<a ng-href="manage-viewapp/{{checkedAppId}}" type="button" class="btn btn-default">View applicaiton</a>
+	</div>
+	<div class="row centered-text bg-danger message-info" ng-show="success == false">
+		<h4>Auto check failed to execute due to the following reason:</h4>
+		<p>{{errMessage}}</p>
+		<h3 class="text-danger">{{errCode}}</h3>
 	</div>
 </div>
