manager assign review team feature

--- a/WebContent/pages/jobapply.html
+++ b/WebContent/pages/jobapply.html
@@ -51,10 +51,10 @@
 			<div class="row">
 				<div class="col-xs-4"></div>
 				<div class="col-xs-2">
-					<a href="/hrmgmtsysweb" class="btn btn-sm btn-primary"><i class="fa fa-search"></i> Find another job</a>
+					<a href="#" class="btn btn-sm btn-primary"><i class="fa fa-search"></i> Find another job</a>
 				</div>
 				<div class="col-xs-2">
-					<a ng-href="/hrmgmtsysweb/application/{{_applyIdNew}}" class="btn btn-sm btn-default"><i class="fa fa-file-text"></i> View your application</a>
+					<a ng-href="application/{{_applyIdNew}}" class="btn btn-sm btn-default"><i class="fa fa-file-text"></i> View your application</a>
 				</div>
 				<div class="col-xs-4">
 					
